<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">MobEats</string>

    <!--    StartActivity-->

    <string name="menu">Tutaj będzie menu</string>
    <string name="start">START</string>
    <string name="logo">Logo</string>
    <string name="additionalLng">PL</string>
    <string name="serverConnectionError">Cannot connect with server!</string>

    <!--    AppActivity-->

    <string name="manageAccountButton">Manage\nAccount</string>
    <string name="findFoodButton">Find\nFood!</string>
    <string name="favouriteRestaurantsButton">Favourite\nRestaurants</string>
    <string name="greetingText">Welcome</string>

    <!--    Login and Register Fragment Section-->

    <string name="hintNickname">Nickname</string>
    <string name="hintPassword">Password</string>
    <string name="noneError">None Error. Sorry try again</string>

    <!--    Login Fragment Section-->

    <string name="signIn">Sign In!</string>
    <string name="loginButton">Login</string>
    <string name="notSingUpCom">You are not sing up?</string>
    <string name="singUpButton">Register here</string>

    <string name="noDataToSignIn">Please enter Nickname and Password!</string>
    <string name="nicknameAndPasswordNotCorrect">Login or password is not correct!</string>
    <string name="successfulLogin">Successful login!</string>

    <!--    Register Fragment Section-->

    <string name="signUp">Sign Up!</string>
    <string name="hintRepeatPassword">Repeat Password</string>
    <string name="registerButton">Register</string>

    <string name="noDataToSingUp">Please enter Nickname and Password!</string>
    <string name="noRepeatPassword">Please repeat password!</string>
    <string name="keyPasswordNotEqual">The passwords do not match!</string>
    <string name="successfulRegister">Successful register!</string>
    <string name="failToRegister">Nickname is already used!</string>

    <!--    Manage Account-->

    <string name="deleteAccountButton">Delete Account</string>
    <string name="changeButton">Change</string>
    <string name="changeNicknameText">Change your nickname</string>
    <string name="changeNicknameHint">Your new nickname</string>
    <string name="changePasswordText">Change your password</string>
    <string name="changePasswordNewHint">Your new password</string>
    <string name="changePasswordOldHint">Your old password</string>

    <string name="changeNicknameAccepted">Change nickname accepted.</string>
    <string name="changePasswordAccepted">Change password accepted.</string>
    <string name="changeRejected">Change rejected</string>
    <string name="changeRejectedNickname">Change rejected. Nickname is already used!</string>
    <string name="changeRejectedSameData">Change rejected. The data is the same!</string>
    <string name="newNicknameText">New:</string>
    <string name="newPasswordText">New:</string>
    <string name="oldPasswordText">Old:</string>
    <string name="deleteAccountAccepted">Delete account accepted.</string>
    <string name="deleteAccountRejected">Reject delete account!</string>

    <!--    Restaurants List-->

    <string name="restaurants">Restaurants</string>
    <string name="restaurantData">Restaurant Data</string>
    <string name="failGetRestaurantList">Failed to retrieve the restaurant list!</string>
    <string name="succeedGetRestaurantList">Succeed to retrieve the restaurant list.</string>

    <string name="deleteRestaurantAccepted">Delete restaurant accepted.</string>
    <string name="deleteRestaurantRejected">Reject delete restaurant!</string>

    <string name="addRestaurantAccepted">Add restaurant accepted.</string>
    <string name="addRestaurantRejected">Reject add restaurant!</string>


    <string name="ratingHead">Rating Points:</string>
    <string name="addressHead">Address:</string>
    <string name="fonNumberHead">Fon. Number:</string>
    <string name="priceLevelHead">Price Level:</string>
    <string name="webPageHead">Web Page:</string>

    <string name="okButton">OK</string>

<!--    Find Food Map-->

    <string name="title_activity_maps">MobEats: Find Food!</string>
    <string name="findFoodOnMap">Find Food!</string>
    <string name="typeOfPremises">Type: </string>
    <string name="pressToAddRestaurantText">Add to Fav.</string>

    <string name="findPplSuccess">Send Notification!</string>
    <string name="findFoodError">There are no selected eateries nearby :(</string>

    <string name="findPplTitle">Would you like to eat?</string>
    <string name="findPplText">Hi! Find food.</string>
    <string name="findPplStarText">Hi! I\'m</string>
    <string name="findPplEndText">and I\'m looking for someone to eat with me. Check it out!</string>

<!--    Map Filters-->

    <string-array name="MapFilters">
        <item>Restaurant</item>
        <item>Cafe</item>
        <item>Bar</item>
    </string-array>

    <!--    Price Level Value-->

    <string-array name="priceLevelsArray">
        <item>Free</item>
        <item>Inexpensive</item>
        <item>Moderate</item>
        <item>Expensive</item>
        <item>Very Expensive</item>
    </string-array>

</resources>