<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lordeats.mobeats.navigation.TitleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/mainBackground"
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ImageBackground1"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/main_app_background_theme"
            app:layout_constraintBottom_toTopOf="@+id/ImageBackground2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/ImageBackground2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:padding="6dp"
            android:src="@drawable/main_app_background_theme_reverse"
            app:layout_constraintBottom_toTopOf="@+id/ImageBackground3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/ImageBackground3"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/main_app_background_theme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/accountImage"
            style="@style/accountImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/dataChangeBg1"
            style="@style/changeDataBackground"
            android:layout_width="250dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="@+id/changeNicknameButton"
            app:layout_constraintEnd_toEndOf="@+id/changeNicknameText"
            app:layout_constraintStart_toStartOf="@+id/changeNicknameText"
            app:layout_constraintTop_toTopOf="@+id/changeNicknameText" />

        <ImageView
            android:id="@+id/dataChangeBg2"
            style="@style/changeDataBackground"
            android:layout_width="250dp"
            android:layout_height="270dp"
            app:layout_constraintBottom_toBottomOf="@+id/changePasswordButton"
            app:layout_constraintEnd_toEndOf="@+id/changePasswordText"
            app:layout_constraintStart_toStartOf="@+id/changePasswordText"
            app:layout_constraintTop_toTopOf="@+id/changePasswordText" />

        <TextView
            android:id="@+id/changeNicknameText"
            style="@style/mainMediumText"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:shadowColor="@color/ic_launcher_background"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/changeNicknameText"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/accountImage"
            app:layout_constraintStart_toEndOf="@+id/accountImage" />

        <TextView
            android:id="@+id/newNicknameText"
            style="@style/mainMediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/newNicknameText"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/editNicknameMaPlainText"
            app:layout_constraintEnd_toStartOf="@+id/editNicknameMaPlainText"
            app:layout_constraintStart_toStartOf="@+id/changeNicknameText" />

        <EditText
            android:id="@+id/editNicknameMaPlainText"
            style="@style/mainTextEditReverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/changeNicknameHint"
            android:inputType="textPersonName"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="@+id/changeNicknameText"
            app:layout_constraintTop_toBottomOf="@+id/changeNicknameText" />

        <Button
            android:id="@+id/changeNicknameButton"
            style="@style/mainTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/changeButton"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/changeNicknameText"
            app:layout_constraintTop_toBottomOf="@+id/editNicknameMaPlainText" />

        <TextView
            android:id="@+id/changePasswordText"
            style="@style/mainMediumText"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:shadowColor="@color/ic_launcher_background"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/changePasswordText"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@+id/changeNicknameText"
            app:layout_constraintTop_toBottomOf="@+id/changeNicknameButton" />

        <TextView
            android:id="@+id/newPasswordText"
            style="@style/mainMediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/newPasswordText"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/keyNewMaPassword"
            app:layout_constraintEnd_toStartOf="@+id/keyNewMaPassword"
            app:layout_constraintStart_toStartOf="@+id/changePasswordText" />

        <EditText
            android:id="@+id/keyNewMaPassword"
            style="@style/mainTextEditReverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/changePasswordNewHint"
            android:inputType="textPassword"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="@+id/changePasswordText"
            app:layout_constraintTop_toBottomOf="@+id/changePasswordText" />

        <TextView
            android:id="@+id/textView4"
            style="@style/mainMediumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/oldPasswordText"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/keyOldMaPassword"
            app:layout_constraintEnd_toStartOf="@+id/keyOldMaPassword"
            app:layout_constraintStart_toStartOf="@+id/changePasswordText" />

        <EditText
            android:id="@+id/keyOldMaPassword"
            style="@style/mainTextEditReverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/changePasswordOldHint"
            android:inputType="textPassword"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="@+id/keyNewMaPassword"
            app:layout_constraintTop_toBottomOf="@+id/keyNewMaPassword" />

        <Button
            android:id="@+id/changePasswordButton"
            style="@style/mainTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/changeButton"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/changePasswordText"
            app:layout_constraintTop_toBottomOf="@+id/keyOldMaPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>