<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        style="@style/DialogWindowBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dialogTitle"
            style="@style/mainMediumTextReverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text=""
            android:textAlignment="center"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ratingHead"
            style="@style/mainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/ratingHead"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogTitle" />

        <TextView
            android:id="@+id/ratingText"
            style="@style/mainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text=""
            app:layout_constraintBottom_toBottomOf="@+id/ratingHead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ratingHead" />

        <TextView
            android:id="@+id/addressHead"
            style="@style/mainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/addressHead"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/ratingHead"
            app:layout_constraintTop_toBottomOf="@+id/ratingHead" />

        <TextView
            android:id="@+id/addressText"
            style="@style/mainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autoLink="map"
            android:gravity="center"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressHead" />

        <TextView
            android:id="@+id/priceLevelHead"
            style="@style/mainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/priceLevelHead"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/addressHead"
            app:layout_constraintTop_toBottomOf="@+id/addressText" />

        <TextView
            android:id="@+id/priceLevelText"
            style="@style/mainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text=""
            app:layout_constraintBottom_toBottomOf="@+id/priceLevelHead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/priceLevelHead" />

        <TextView
            android:id="@+id/fonNumberHead"
            style="@style/mainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/fonNumberHead"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/priceLevelHead"
            app:layout_constraintTop_toBottomOf="@+id/priceLevelHead" />

        <TextView
            android:id="@+id/fonNumberText"
            style="@style/mainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:autoLink="phone"
            android:text=""
            app:layout_constraintBottom_toBottomOf="@+id/fonNumberHead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/fonNumberHead" />

        <TextView
            android:id="@+id/webPageHead"
            style="@style/mainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/webPageHead"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/fonNumberHead"
            app:layout_constraintTop_toBottomOf="@+id/fonNumberHead" />

        <TextView
            android:id="@+id/webPageText"
            style="@style/mainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autoLink="web"
            android:gravity="center"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/webPageHead" />

        <Button
            android:id="@+id/okButton"
            style="@style/mainTextButton"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/okButton"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/webPageText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

